<resources>
    <string name="app_name">Saral Vigyan</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="teacher">Teacher</string>
    <string name="sign_up_link">Not a member? Sign up</string>
    <string name="btn_sign_in">Login</string>
    <string name="parent">Parent</string>
    <string name="hint_phone">Mobile No.</string>
    <string name="new_user_sign_up">New user? Sign Up</string>
    <string name="existing_member_sign_in">Existing member? sign in</string>
    <string name="msg_sit_back">Sit back &amp; Relax! while we verify your mobile number</string>
    <string name="msg_manual_otp">(Enter the OTP below in case if we fail to detect the SMS automatically)</string>
    <string name="lbl_enter_otp">Enter OTP</string>
    <string name="lbl_submit">SUBMIT</string>
    <string-array name="india_states">
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
    <string-array name="mumbai_localities">
        <item>Agripada</item>
        <item>Air India Staff Colony</item>
        <item>Airoli</item>
        <item>Airoli sector 4</item>
        <item>Airoli sector 8</item>
        <item>Ambarnath</item>
        <item>Ambarnath East</item>
        <item>Ambernath West</item>
        <item>Ambewadi</item>
        <item>Amboli</item>
        <item>Andheri</item>
        <item>Andheri East</item>
        <item>Andheri West</item>
        <item>Antop Hill</item>
        <item>Apollo Bunder</item>
        <item>August Kranti Maidan</item>
        <item>Azad Nagar</item>
        <item>Badlapur</item>
        <item>Ballard Estate</item>
        <item>Bandra East</item>
        <item>Bandra West</item>
        <item>Belapur</item>
        <item>Bhandup East</item>
        <item>Bhandup West</item>
        <item>Bharat Nagar</item>
        <item>Bhayandar East</item>
        <item>Bhayandar Eest</item>
        <item>Bhayander</item>
        <item>Bhiwandi</item>
        <item>Bhoiwada</item>
        <item>Boisar</item>
        <item>Borivali East</item>
        <item>Borivali West</item>
        <item>Breach Candy</item>
        <item>Byculla East</item>
        <item>Byculla West</item>
        <item>CBD Belapur Sector 11</item>
        <item>Chandivali</item>
        <item>Chembur East</item>
        <item>Chembur West</item>
        <item>Chinchpokli East</item>
        <item>Chinchpokli West</item>
        <item>Chira Bazaar</item>
        <item>Chowpatti</item>
        <item>Churchgate</item>
        <item>Colaba</item>
        <item>Cuffe parade</item>
        <item>Cumbala Hill</item>
        <item>Dadar East</item>
        <item>Dadar T T</item>
        <item>Dadar West</item>
        <item>Dahisar East</item>
        <item>Dahisar West</item>
        <item>Dana Bunder</item>
        <item>Danda</item>
        <item>Deonar</item>
        <item>Dharavi</item>
        <item>Dhobhi Talao</item>
        <item>Dombivali East</item>
        <item>Dombivali West</item>
        <item>Fort</item>
        <item>Gamdevi</item>
        <item>Ghansoli</item>
        <item>Ghatkopar East</item>
        <item>Ghatkopar West</item>
        <item>Girgaon</item>
        <item>Girgaon Chowpatty</item>
        <item>Goregaon East</item>
        <item>Goregaon West</item>
        <item>Goregoan</item>
        <item>Govandi East</item>
        <item>Govandi West</item>
        <item>Government colony</item>
        <item>Gowalia Tank</item>
        <item>Grant Road East</item>
        <item>Grant Road West</item>
        <item>Green Park Extension</item>
        <item>Irla</item>
        <item>J B nagar</item>
        <item>Jacob circle</item>
        <item>Jogeshwari East</item>
        <item>Jogeshwari West</item>
        <item>Juhu</item>
        <item>Juhu scheme</item>
        <item>Kala ghoda</item>
        <item>Kalamboli</item>
        <item>Kalbadevi</item>
        <item>Kalwa</item>
        <item>Kalyan East</item>
        <item>Kalyan West</item>
        <item>Kamothe</item>
        <item>Kandivali East</item>
        <item>Kandivali West</item>
        <item>Kanjur Marg East</item>
        <item>Kanjur Marg West</item>
        <item>Kemps corner</item>
        <item>Ketkipada</item>
        <item>Khar Danda</item>
        <item>Khar East</item>
        <item>Khar West</item>
        <item>Kharghar</item>
        <item>Kharghar Sector 12</item>
        <item>Kharghar Sector 2</item>
        <item>Kharghar Sector 7</item>
        <item>Khetwadi</item>
        <item>Khopoli</item>
        <item>Kidwai Nagar</item>
        <item>Kopar Khairane</item>
        <item>Kurla East</item>
        <item>Kurla West</item>
        <item>Lal Baug</item>
        <item>Lohar Chawl</item>
        <item>Lokhandwala</item>
        <item>Lower Parel East</item>
        <item>Lower Parel West</item>
        <item>Mahalaxmi</item>
        <item>Mahape</item>
        <item>Mahim East</item>
        <item>Mahim West</item>
        <item>Malabar hill</item>
        <item>Malad East</item>
        <item>Malad West</item>
        <item>Marine lines</item>
        <item>Mazagaon</item>
        <item>Naigaon</item>
        <item>Navi mumbai</item>
        <item>Oshiwara</item>
        <item>Panvel</item>
        <item>Parel</item>
        <item>Prabhadevi</item>
        <item>Santacruz</item>
        <item>Seepz</item>
        <item>Tardeo</item>
        <item>Thakurdwar</item>
        <item>Vakola</item>
        <item>Vesava</item>
        <item>Vile parle</item>
        <item>Wadala</item>
        <item>Worli</item>
    </string-array>
</resources>